--- a/Translations/en.json
+++ b/Translations/en.json
@@ -29,7 +29,11 @@
     "Recommended For You": "Recommended For You",
     "Shop By Category": "Shop By Category",
     "Recently Viewed": "Recently Viewed",
-    "Popular Brands": "Popular Brands"
+    "Popular Brands": "Popular Brands",
+    "See All Brands": "See All Brands",
+    "Trending Sneakers": "Trending Sneakers",
+    "See All": "See All",
+    "All Product": "All Product"
   },
   "search": {
     "Find your favourite one": "Find your favourite one"
