--- a/Translations/kh.json
+++ b/Translations/kh.json
@@ -29,7 +29,11 @@
     "Recommended For You": "បានណែនាំសម្រាប់អ្នក",
     "Shop By Category": "ទិញទំនិញតាមប្រភេទ",
     "Recently Viewed": "បានមើលថ្មីៗនេះ",
-    "Popular Brands": "ម៉ាកល្បីៗ"
+    "Popular Brands": "ម៉ាកល្បីៗ",
+    "See All Brands": "មើលម៉ាកទាំងអស់",
+    "Trending Sneakers": "ស្បែកជើងកំពុងពេញនិយម",
+    "See All": "មើលទាំងអស់",
+    "All Product": "ផលិតផលទាំងអស់"
   },
   "search": {
     "Find your favourite one": "ស្វែងរកមួយដែលអ្នកចូលចិត្ត"
