--- a/Translations/kh.json
+++ b/Translations/kh.json
@@ -73,5 +73,13 @@
     "Resend": " ផ្ញើឡើងវិញ",
     "Didn't Received the code?": "មិនទទួលលេខកូដមែនទេ?",
     "We've send an SMS with an activation code to your phone number +855": "យើងបានផ្ញើសារ SMS ជាមួយនឹងលេខកូដធ្វើឱ្យសកម្មទៅកាន់លេខទូរស័ព្ទរបស់អ្នក +855"
+  },
+  "profile": {
+    "Name": "ឈ្មោះ",
+    "Phone Number": "លេខទូរស័ព្ទ",
+    "Email": "អ៊ីមែល",
+    "Old Password": "ពាក្យសម្ងាត់ចាស់",
+    "New Password": "ពាក្យសម្ងាត់ថ្មី",
+    "Save": "រក្សាទុក"
   }
 }
