--- a/Translations/kh.json
+++ b/Translations/kh.json
@@ -27,7 +27,8 @@
     "Notification": "ការជូនដំណឹង",
     "Buying": "ការបញ្ជាទិញ",
     "Profile": "ប្រវត្តិរូប",
-    "Cart": "ទំនិញដែលដាក់ចូលកន្ត្រក"
+    "Cart": "ទំនិញដែលដាក់ចូលកន្ត្រក",
+    "Product Image": "រូបភាពផលិតផល"
   },
   "startUp": {
     "Version": "កំណែ",
@@ -96,5 +97,9 @@
     "ORDERS": "ការបញ្ជាទិញ",
     "Items": "ទំនិញ",
     "size": "ទំហំ"
+  },
+  "detail": {
+    "Size": "ទំហំ",
+    "Select Size": "ជ្រើសរើសទំហំ"
   }
 }
